// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds follow views > fetches followers 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "followers": [
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-eve",
      "did": "user(0)",
      "displayName": "display-eve",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-dan",
      "did": "user(2)",
      "displayName": "display-dan",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-bob",
      "did": "user(4)",
      "displayName": "display-bob",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(7)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-carol",
      "did": "user(6)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(7)",
        "following": "record(6)",
        "muted": false,
      },
    },
  ],
  "subject": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(9)/cids(0)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-alice",
    "did": "user(8)",
    "displayName": "display-alice",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
}
`;

exports[`pds follow views > fetches followers 2`] = `
{
  "cursor": "0000000000000__bafycid",
  "followers": [
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-dan",
      "did": "user(0)",
      "displayName": "display-dan",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-alice",
      "did": "user(2)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
  "subject": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-bob",
    "did": "user(4)",
    "displayName": "display-bob",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "followedBy": "record(3)",
      "following": "record(2)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views > fetches followers 3`] = `
{
  "cursor": "0000000000000__bafycid",
  "followers": [
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-eve",
      "did": "user(0)",
      "displayName": "display-eve",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-bob",
      "did": "user(2)",
      "displayName": "display-bob",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-alice",
      "did": "user(4)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
  "subject": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(7)/cids(0)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-carol",
    "did": "user(6)",
    "displayName": "display-carol",
    "handle": "carol.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "followedBy": "record(5)",
      "following": "record(4)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views > fetches followers 4`] = `
{
  "cursor": "0000000000000__bafycid",
  "followers": [
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-alice",
      "did": "user(0)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
  "subject": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-dan",
    "did": "user(2)",
    "displayName": "display-dan",
    "handle": "dan.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views > fetches followers 5`] = `
{
  "cursor": "0000000000000__bafycid",
  "followers": [
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-dan",
      "did": "user(0)",
      "displayName": "display-dan",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-alice",
      "did": "user(2)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
  "subject": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-eve",
    "did": "user(4)",
    "displayName": "display-eve",
    "handle": "eve.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "followedBy": "record(3)",
      "following": "record(2)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views > fetches follows 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "follows": [
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-eve",
      "did": "user(0)",
      "displayName": "display-eve",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-dan",
      "did": "user(2)",
      "displayName": "display-dan",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-carol",
      "did": "user(4)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(7)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-bob",
      "did": "user(6)",
      "displayName": "display-bob",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(7)",
        "following": "record(6)",
        "muted": false,
      },
    },
  ],
  "subject": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(9)/cids(0)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-alice",
    "did": "user(8)",
    "displayName": "display-alice",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
}
`;

exports[`pds follow views > fetches follows 2`] = `
{
  "cursor": "0000000000000__bafycid",
  "follows": [
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-carol",
      "did": "user(0)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-alice",
      "did": "user(2)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
  "subject": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-bob",
    "did": "user(4)",
    "displayName": "display-bob",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "followedBy": "record(3)",
      "following": "record(2)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views > fetches follows 3`] = `
{
  "cursor": "0000000000000__bafycid",
  "follows": [
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-alice",
      "did": "user(0)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
  "subject": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-carol",
    "did": "user(2)",
    "displayName": "display-carol",
    "handle": "carol.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views > fetches follows 4`] = `
{
  "cursor": "0000000000000__bafycid",
  "follows": [
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-eve",
      "did": "user(0)",
      "displayName": "display-eve",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-bob",
      "did": "user(2)",
      "displayName": "display-bob",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-alice",
      "did": "user(4)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
  "subject": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(7)/cids(0)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-dan",
    "did": "user(6)",
    "displayName": "display-dan",
    "handle": "dan.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "followedBy": "record(5)",
      "following": "record(4)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views > fetches follows 5`] = `
{
  "cursor": "0000000000000__bafycid",
  "follows": [
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-carol",
      "did": "user(0)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-alice",
      "did": "user(2)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
  "subject": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-eve",
    "did": "user(4)",
    "displayName": "display-eve",
    "handle": "eve.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "followedBy": "record(3)",
      "following": "record(2)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views > fetches relationships between users 1`] = `
{
  "actor": "user(0)",
  "relationships": [
    {
      "$type": "app.bsky.graph.defs#relationship",
      "did": "user(1)",
      "followedBy": "record(1)",
      "following": "record(0)",
    },
    {
      "$type": "app.bsky.graph.defs#relationship",
      "did": "user(0)",
    },
    {
      "$type": "app.bsky.graph.defs#relationship",
      "did": "user(2)",
      "following": "record(2)",
    },
  ],
}
`;
